// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render correctly with custom props 1`] = `
<svg>
  <g
    class="test2"
  >
    <div>
      child
    </div>
  </g>
</svg>
`;

exports[`Layout should render correctly with default props 1`] = `
<svg>
  <g
    class="test1"
  >
    <div>
      child
    </div>
  </g>
</svg>
`;
